deploy/k8s/md-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: simple-webapp
spec:
  stripPrefix:
    prefixes:
      - /simple-webapp
