deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp
  namespace: simple-webapp
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: simple-webapp
